--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <main>
+      <h1>Camaker</h1>
       <canvas></canvas>
     </main>
+    <script src="Elements.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
