--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:title" content="Camaker" />
+    <meta property="og:site_name" content="Camaker">
+    <meta property="og:description" content="CA Maker">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://magnogen.net/camaker/og-image.png">
+    <meta property="og:image:alt" content="A watery coloured Rock-Paper-Scissors-Automata">
+    <title>Camaker</title>
+    <link rel="icon"  href="https://magnogen.net/camaker/favicon.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <main>
