site name change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="twitter:card" content="summary" />
     <meta property="og:title" content="Camaker" />
-    <meta property="og:site_name" content="Camaker">
+    <meta property="og:site_name" content="Magnogen.net/Camaker">
     <meta property="og:description" content="CA Maker">
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://magnogen.net/camaker/og-image.png">
